--- a/examples/fps/Cargo.toml
+++ b/examples/fps/Cargo.toml
@@ -52,5 +52,10 @@ leafwing-input-manager.workspace = true
 serde.workspace = true
 bevy.workspace = true
 
+[package.metadata.bevy_cli.web]
+rustflags = ["--cfg", "getrandom_backend=\"wasm_js\""]
+default-features = false
+features = ["client", "netcode"]
+
 [lints]
 workspace = true
