--- a/examples/network_visibility/Cargo.toml
+++ b/examples/network_visibility/Cargo.toml
@@ -41,9 +41,13 @@ lightyear = { workspace = true, features = [
 ] }
 lightyear_examples_common.workspace = true
 
-leafwing-input-manager.workspace = true
 serde.workspace = true
 bevy.workspace = true
+
+[package.metadata.bevy_cli.web]
+rustflags = ["--cfg", "getrandom_backend=\"wasm_js\""]
+default-features = false
+features = ["client", "netcode"]
 
 [lints]
 workspace = true
