--- a/examples/replication_groups/Cargo.toml
+++ b/examples/replication_groups/Cargo.toml
@@ -50,6 +50,11 @@ serde.workspace = true
 tracing.workspace = true
 bevy.workspace = true
 
+[package.metadata.bevy_cli.web]
+rustflags = ["--cfg", "getrandom_backend=\"wasm_js\""]
+default-features = false
+features = ["client", "netcode"]
+
 [lints]
 workspace = true
 
