--- a/demos/spaceships/Cargo.toml
+++ b/demos/spaceships/Cargo.toml
@@ -45,6 +45,11 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 bevy = { workspace = true, features = ["bevy_state"] }
 
+[package.metadata.bevy_cli.web]
+rustflags = ["--cfg", "getrandom_backend=\"wasm_js\""]
+default-features = false
+features = ["client", "netcode"]
+
 [lints]
 workspace = true
 
