--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -147,7 +147,7 @@ crossbeam = ["dep:lightyear_crossbeam"]
 
 # CONNECTION LAYERS
 ## Enables Steam as a connection layer
-steam = ["dep:steamworks", "dep:lightyear_steam", "std"]
+steam = ["dep:lightyear_steam", "std"]
 
 [dependencies]
 # local crates
@@ -193,7 +193,6 @@ document-features.workspace = true
 
 [target."cfg(not(target_family = \"wasm\"))".dependencies]
 lightyear_udp = { workspace = true, optional = true }
-steamworks = { workspace = true, optional = true }
 
 [target."cfg(target_family = \"wasm\")".dependencies]
 console_error_panic_hook.workspace = true
