--- a/Cargo.toml
+++ b/Cargo.toml
@@ -154,7 +154,7 @@ metrics = "0.24"
 
 # transport
 aeronet_webtransport = "0.14.0"
-aeronet_steam = "0.14.0"
+aeronet_steam = "0.14.1"
 aeronet_io = "0.14.0"
 # we don't need any tokio features, we use only use the tokio channels
 tokio = { version = "1.45", features = [
@@ -165,6 +165,7 @@ async-compat = "0.2.3"
 
 # WASM things
 console_error_panic_hook = "0.1.7"
+web-time = "1.1.0"
 bevy_web_keepalive = "0.3.5"
 getrandom = { version = "0.3", features = [
   "wasm_js", # feature 'js' is required for wasm, see https://github.com/rust-random/getrandom?tab=readme-ov-file#webassembly-support
