--- a/lightyear_prediction/Cargo.toml
+++ b/lightyear_prediction/Cargo.toml
@@ -40,6 +40,7 @@ bytes = { workspace = true, optional = true }
 # bevy
 bevy_app.workspace = true
 bevy_diagnostic.workspace = true
+bevy_derive.workspace = true
 bevy_ecs.workspace = true
 bevy_math = { workspace = true, features = ["curve"] }
 bevy_platform.workspace = true
