feat(correction): overhaul of the correction system
The previous system didn't give good visual results and was overly
complicated.

The new system follows this formula:
```
//  exponentially decay the remaining error
let dt = virtual_time.delta_seconds();

// r = e^(ln(R)/τ * Δt)
// r :- fraction remaining after Δt
// R :- fraction remaining after τ
// τ :- time to decay to R
let decay = decay_fraction.ln() / decay_period;
let r = (decay * dt).exp();

translation_error = Vec3::lerp(Vec3::ZERO, translation_error, r);
rotation_error = Quat::slerp(Quat::IDENTITY, rotation_error, r);

// interpolate previous and current tick
let t = fixed_time.overstep_fraction();
let mut render_translation = Vec3::lerp(previous_translation,
current_translation, t);
let mut render_rotation = Quat::slerp(previous_rotation,
current_rotation, t);

// add remaining error on top
render_translation += translation_error;
render_rotation *= rotation_error;
```

i.e. compute an error from the previous visual and the corrected visual
post-rollback, then exponentially decay this error over time.

--- a/lightyear_avian3d/Cargo.toml
+++ b/lightyear_avian3d/Cargo.toml
@@ -32,7 +32,7 @@ lightyear_link.workspace = true
 lightyear_prediction.workspace = true
 lightyear_interpolation.workspace = true
 lightyear_frame_interpolation.workspace = true
-lightyear_replication.workspace = true
+lightyear_replication = { workspace = true, features = ["avian3d"] }
 
 avian3d.workspace = true
 
