--- a/lightyear_avian2d/Cargo.toml
+++ b/lightyear_avian2d/Cargo.toml
@@ -32,7 +32,7 @@ lightyear_link.workspace = true
 lightyear_prediction.workspace = true
 lightyear_interpolation.workspace = true
 lightyear_frame_interpolation.workspace = true
-lightyear_replication.workspace = true
+lightyear_replication = { workspace = true, features = ["avian2d"] }
 
 avian2d.workspace = true
 
