--- a/Cargo.toml
+++ b/Cargo.toml
@@ -204,7 +204,8 @@ tracy-client = { version = "=0.18.0" }
 
 # input
 bevy_enhanced_input = { version = "0.14.1" }
-leafwing-input-manager = { version = "0.17", default-features = false, features = [
+# TODO: replace with version 0.17.1 when it is relased
+leafwing-input-manager = { git = "https://github.com/cBournhonesque/leafwing-input-manager/", branch = "cb/override-state-function", default-features = false, features = [
   "keyboard",
 ] }
 
