--- a/lightyear_prediction/Cargo.toml
+++ b/lightyear_prediction/Cargo.toml
@@ -26,6 +26,8 @@ lightyear_replication = { workspace = true, features = [
 ] }
 lightyear_sync.workspace = true
 lightyear_messages = { workspace = true, optional = true }
+lightyear_frame_interpolation.workspace = true
+lightyear_interpolation.workspace = true
 
 # utils
 metrics = { workspace = true, optional = true }
@@ -40,6 +42,7 @@ bytes = { workspace = true, optional = true }
 # bevy
 bevy_app.workspace = true
 bevy_diagnostic.workspace = true
+bevy_derive.workspace = true
 bevy_ecs.workspace = true
 bevy_math = { workspace = true, features = ["curve"] }
 bevy_platform.workspace = true
