--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,8 +66,8 @@ debug = false
 
 [workspace.dependencies]
 lightyear_aeronet = { path = "./lightyear_aeronet", version = " 0.21.1", default-features = false }
-lightyear_avian2d = { path = "./lightyear_avian2d", version = " 0.21.1", default-features = false }
-lightyear_avian3d = { path = "./lightyear_avian3d", version = " 0.21.1", default-features = false }
+lightyear_avian2d = { path = "./lightyear_avian2d", version = " 0.21.1", default-features = false, features = ["2d"] }
+lightyear_avian3d = { path = "./lightyear_avian3d", version = " 0.21.1", default-features = false, features = ["3d"] }
 lightyear_netcode = { path = "./lightyear_netcode", version = " 0.21.1", default-features = false }
 lightyear_connection = { path = "./lightyear_connection", version = " 0.21.1", default-features = false }
 lightyear_core = { path = "./lightyear_core", version = " 0.21.1", default-features = false }
