--- a/lightyear_inputs_leafwing/Cargo.toml
+++ b/lightyear_inputs_leafwing/Cargo.toml
@@ -34,6 +34,9 @@ bevy_math.workspace = true
 bevy_platform.workspace = true
 bevy_reflect.workspace = true
 
+[dev-dependencies]
+test-log.workspace = true
+
 [lints]
 workspace = true
 
