Fixed lib/path not pointing to lib.rs, unsure how it worked locally.

--- a/lightyear_avian2d/Cargo.toml
+++ b/lightyear_avian2d/Cargo.toml
@@ -14,7 +14,7 @@ publish = true
 
 [lib]
 name = "lightyear_avian2d"
-path = "../lightyear_avian"
+path = "../lightyear_avian/src/lib.rs"
 required-features = ["2d"]
 bench = false
 
