--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -75,6 +75,14 @@ server = [
   "lightyear_udp?/server",
   "lightyear_webtransport?/server",
 ]
+## Adds helper plugins to use for deterministic replication (where only inputs are replicated)
+deterministic = [
+  "dep:lightyear_deterministic_replication",
+  "lightyear_replication?/deterministic",
+  "lightyear_prediction?/deterministic",
+  "lightyear_avian2d?/deterministic",
+  "lightyear_avian3d?/deterministic",
+]
 ## Enables replicating entities between two peers
 replication = [
   "dep:lightyear_replication",
@@ -157,6 +165,7 @@ lightyear_avian2d = { workspace = true, optional = true, features = ["2d"] }
 lightyear_avian3d = { workspace = true, optional = true, features = ["3d"] }
 lightyear_connection.workspace = true
 lightyear_core.workspace = true
+lightyear_deterministic_replication = { workspace = true, optional = true }
 lightyear_frame_interpolation = { workspace = true, optional = true }
 lightyear_link.workspace = true
 lightyear_netcode = { workspace = true, optional = true }
