--- a/lightyear_deterministic_replication/Cargo.toml
+++ b/lightyear_deterministic_replication/Cargo.toml
@@ -9,38 +9,32 @@ description = "Primitives for deterministic replication (as opposed to state rep
 repository = "https://github.com/cBournhonesque/lightyear"
 
 [features]
+std = [
+    "lightyear_messages/std",
+]
 default = []
-prediction = []
-interpolation = []
-test_utils = ["dep:mock_instant"]
-# special feature to avoid using mock_instant when running cargo doc and cargo clippy
-not_mock = []
 
 [dependencies]
 lightyear_utils.workspace = true
-lightyear_serde.workspace = true
+lightyear_core.workspace = true
+lightyear_inputs = {workspace = true, features = ["client"] }
+lightyear_link.workspace = true
 lightyear_messages.workspace = true
+lightyear_connection.workspace = true
+lightyear_sync.workspace = true
+lightyear_prediction = { workspace = true, features = ["deterministic"] }
+lightyear_replication = { workspace = true, features = ["deterministic"]}
 
 # utils
-chrono.workspace = true
+seahash.workspace = true
 tracing.workspace = true
 
 # bevy
 bevy_app = { workspace = true, features = ["bevy_reflect"] }
-bevy_derive.workspace = true
 bevy_ecs.workspace = true
-bevy_platform.workspace = true
-bevy_reflect.workspace = true
-bevy_time.workspace = true
 
 # serde
 serde.workspace = true
-
-# test
-mock_instant = { workspace = true, optional = true }
-
-[dev-dependencies]
-approx.workspace = true
 
 [lints]
 workspace = true
