chore(input): simplify input native by distinguishing between empty inputs and missing inputs

--- a/lightyear_inputs_native/Cargo.toml
+++ b/lightyear_inputs_native/Cargo.toml
@@ -26,6 +26,7 @@ serde.workspace = true
 
 # bevy
 bevy_app.workspace = true
+bevy_derive.workspace = true
 bevy_ecs.workspace = true
 bevy_reflect.workspace = true
 
