fix(rollback): fix tricky bugs to bring back the avian2d example to be smooth
- we cannot use InputTimeline.tick() as the InputTimeline is only
  updated in PreUpdate

- the lightyear_avian plugins were not being used anymore in the
  examples, and they were missing an ordering for
  PredictionSet::UpdateHistory

--- a/examples/deterministic_replication/Cargo.toml
+++ b/examples/deterministic_replication/Cargo.toml
@@ -20,11 +20,12 @@ lightyear = { workspace = true, features = [
   "replication",
   "leafwing",
   "deterministic",
-  "avian2d",
 ] }
 lightyear_examples_common.workspace = true
 lightyear_frame_interpolation.workspace = true
 leafwing-input-manager.workspace = true
+# add avian2d directly to customize the plugin 
+lightyear_avian2d = { workspace = true, features = ["deterministic", "2d"]}
 avian2d = { workspace = true, features = [
   "2d",
   "f32",
