--- a/lightyear_deterministic_replication/Cargo.toml
+++ b/lightyear_deterministic_replication/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lightyear_deterministic_replication"
-version = "0.22.3"
+version = "0.22.4"
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -10,9 +10,12 @@ repository = "https://github.com/cBournhonesque/lightyear"
 
 [features]
 std = [
+    "bevy_ecs/std",
+    "lightyear_inputs/std",
     "lightyear_messages/std",
+    "lightyear_prediction/std",
 ]
-default = []
+default = ["std"]
 
 [dependencies]
 lightyear_utils.workspace = true
@@ -20,7 +23,7 @@ lightyear_core.workspace = true
 lightyear_inputs = {workspace = true, features = ["client"] }
 lightyear_link.workspace = true
 lightyear_messages.workspace = true
-lightyear_connection.workspace = true
+lightyear_connection = {workspace = true, features = ["server"] }
 lightyear_sync.workspace = true
 lightyear_prediction = { workspace = true, features = ["deterministic"] }
 lightyear_replication = { workspace = true, features = ["deterministic"]}
