fix(example): fix spaceships example
- limit the client prespawn system to the local user. For remote users,
  we just wait until we receive the replicated bullet from the server
- to avoid spurious input mismatches, we decay the latest input before
  checking for mismatches. In particular for Leafwing this converts from
  JustPressed to Pressed

--- a/lightyear_inputs_leafwing/Cargo.toml
+++ b/lightyear_inputs_leafwing/Cargo.toml
@@ -29,6 +29,7 @@ serde.workspace = true
 # bevy
 bevy_app.workspace = true
 bevy_ecs.workspace = true
+bevy_derive.workspace = true
 bevy_input.workspace = true
 bevy_math.workspace = true
 bevy_platform.workspace = true
