--- a/lightyear_avian3d/Cargo.toml
+++ b/lightyear_avian3d/Cargo.toml
@@ -14,7 +14,7 @@ publish = true
 
 [lib]
 name = "lightyear_avian3d"
-#path = "../lightyear_avian/src/lib.rs"
+path = "../lightyear_avian/src/lib.rs"
 required-features = ["3d"]
 bench = false
 
