--- a/lightyear_aeronet/Cargo.toml
+++ b/lightyear_aeronet/Cargo.toml
@@ -11,9 +11,12 @@ repository = "https://github.com/cBournhonesque/lightyear"
 [features]
 default = ["std"]
 std = ["lightyear_link/std"]
-test_utils = []
+test_utils = [
+    "lightyear_core/test_utils"
+]
 
 [dependencies]
+lightyear_core.workspace = true
 lightyear_link.workspace = true
 
 aeronet_io.workspace = true
