chore: clippy for rust 1.89

--- a/lightyear_tests/Cargo.toml
+++ b/lightyear_tests/Cargo.toml
@@ -24,6 +24,7 @@ std = [
 ]
 test_utils = [
     "lightyear_core/test_utils",
+    "lightyear_transport/test_utils",
     "lightyear_replication/test_utils",
     "lightyear_crossbeam/test_utils",
     "lightyear_aeronet/test_utils",
