--- a/examples/projectiles/Cargo.toml
+++ b/examples/projectiles/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "projectiles"
 version = "0.0.0"
+rust-version.workspace = true
+edition.workspace = true
 authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
-edition = "2021"
 publish = false
 
 [features]
