--- a/examples/common/Cargo.toml
+++ b/examples/common/Cargo.toml
@@ -13,7 +13,7 @@ exclude = ["/tests"]
 
 [features]
 default = ["client", "server", "netcode", "udp"]
-client = ["lightyear/client", "gui"]
+client = ["lightyear/client"]
 server = ["lightyear/server"]
 netcode = ["lightyear/netcode"]
 udp = ["lightyear/udp"]
