--- a/lightyear_inputs_bei/Cargo.toml
+++ b/lightyear_inputs_bei/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/cBournhonesque/lightyear"
 default = ["std"]
 std = ["lightyear_inputs/std"]
 client = ["lightyear_inputs/client"]
-server = ["lightyear_inputs/server", "lightyear_connection"]
+server = ["lightyear_inputs/server", "lightyear_connection", "lightyear_link"]
 
 [dependencies]
 lightyear_core.workspace = true
@@ -21,6 +21,7 @@ lightyear_utils.workspace = true
 lightyear_prediction.workspace = true
 lightyear_replication.workspace = true
 lightyear_serde.workspace = true
+lightyear_link = { workspace = true, optional = true }
 lightyear_connection = { workspace = true, optional = true }
 
 # inputs
