--- a/lightyear_avian2d/Cargo.toml
+++ b/lightyear_avian2d/Cargo.toml
@@ -51,5 +51,8 @@ bevy_utils.workspace = true
 # utils
 seahash = { workspace = true, optional = true }
 
+[lints]
+workspace = true
+
 [package.metadata.docs.rs]
 all-features = true
