--- a/lightyear_inputs_bei/Cargo.toml
+++ b/lightyear_inputs_bei/Cargo.toml
@@ -21,6 +21,7 @@ lightyear_utils.workspace = true
 lightyear_prediction.workspace = true
 lightyear_replication.workspace = true
 lightyear_serde.workspace = true
+lightyear_link.workspace = true
 lightyear_connection = { workspace = true, optional = true }
 
 # inputs
