--- a/Cargo.toml
+++ b/Cargo.toml
@@ -207,7 +207,7 @@ bevy_utils = { version = "0.16", default-features = false }
 tracy-client = { version = "=0.18.0" }
 
 # input
-bevy_enhanced_input = { version = "0.16" }
+bevy_enhanced_input = { git = "https://github.com/simgine/bevy_enhanced_input.git", branch = "master" }
 leafwing-input-manager = { version = "0.17.1", default-features = false, features = [
   "keyboard",
 ] }
