--- a/lightyear_avian3d/Cargo.toml
+++ b/lightyear_avian3d/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lightyear_avian3d"
-version = "0.23.0"
+version = "0.24.0"
 authors.workspace = true
 rust-version.workspace = true
 edition.workspace = true
@@ -14,7 +14,7 @@ publish = true
 
 [lib]
 name = "lightyear_avian3d"
-path = "../lightyear_avian/src/lib.rs"
+#path = "../lightyear_avian/src/lib.rs"
 required-features = ["3d"]
 bench = false
 
