--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ exclude = []
 
 
 [workspace.package]
-version = "0.23.0"
+version = "0.24.0"
 authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
 publish = false
 edition = "2024"
@@ -66,37 +66,37 @@ debug = false
 
 
 [workspace.dependencies]
-lightyear_aeronet = { path = "./lightyear_aeronet", version = "0.23.0", default-features = false }
-lightyear_avian2d = { path = "./lightyear_avian2d", version = "0.23.0", default-features = false, features = ["2d"] }
-lightyear_avian3d = { path = "./lightyear_avian3d", version = "0.23.0", default-features = false, features = ["3d"] }
-lightyear_netcode = { path = "./lightyear_netcode", version = "0.23.0", default-features = false }
-lightyear_connection = { path = "./lightyear_connection", version = "0.23.0", default-features = false }
-lightyear_core = { path = "./lightyear_core", version = "0.23.0", default-features = false }
-lightyear_crossbeam = { path = "./lightyear_crossbeam", version = "0.23.0", default-features = false }
-lightyear_deterministic_replication = { path = "./lightyear_deterministic_replication", version = "0.23.0", default-features = false }
-lightyear_frame_interpolation = { path = "./lightyear_frame_interpolation", version = "0.23.0", default-features = false }
-lightyear_inputs = { path = "./lightyear_inputs", version = "0.23.0", default-features = false }
-lightyear_inputs_bei = { path = "./lightyear_inputs_bei", version = "0.23.0", default-features = false }
-lightyear_inputs_leafwing = { path = "./lightyear_inputs_leafwing", version = "0.23.0", default-features = false }
-lightyear_inputs_native = { path = "./lightyear_inputs_native", version = "0.23.0", default-features = false }
-lightyear_interpolation = { path = "./lightyear_interpolation", version = "0.23.0", default-features = false }
-lightyear_messages = { path = "./lightyear_messages", version = "0.23.0", default-features = false }
-lightyear = { path = "lightyear", version = "0.23.0", default-features = false }
-lightyear_transport = { path = "lightyear_transport", version = "0.23.0", default-features = false }
-lightyear_prediction = { path = "./lightyear_prediction", version = "0.23.0", default-features = false }
-lightyear_link = { path = "./lightyear_link", version = "0.23.0", default-features = false }
-lightyear_replication = { path = "./lightyear_replication", version = "0.23.0", default-features = false }
-lightyear_serde = { path = "./lightyear_serde", version = "0.23.0", default-features = false }
-lightyear_steam = { path = "./lightyear_steam", version = "0.23.0", default-features = false }
-lightyear_sync = { path = "./lightyear_sync", version = "0.23.0", default-features = false }
-lightyear_udp = { path = "./lightyear_udp", version = "0.23.0", default-features = false }
-lightyear_utils = { path = "./lightyear_utils", version = "0.23.0", default-features = false }
-lightyear_tests = { path = "./lightyear_tests", version = "0.23.0", default-features = false }
-lightyear_webtransport = { path = "./lightyear_webtransport", version = "0.23.0", default-features = false }
-lightyear_websocket = { path = "./lightyear_websocket", version = "0.23.0", default-features = false }
+lightyear_aeronet = { path = "./lightyear_aeronet", version = "0.24.0", default-features = false }
+lightyear_avian2d = { path = "./lightyear_avian2d", version = "0.24.0", default-features = false, features = ["2d"] }
+lightyear_avian3d = { path = "./lightyear_avian3d", version = "0.24.0", default-features = false, features = ["3d"] }
+lightyear_netcode = { path = "./lightyear_netcode", version = "0.24.0", default-features = false }
+lightyear_connection = { path = "./lightyear_connection", version = "0.24.0", default-features = false }
+lightyear_core = { path = "./lightyear_core", version = "0.24.0", default-features = false }
+lightyear_crossbeam = { path = "./lightyear_crossbeam", version = "0.24.0", default-features = false }
+lightyear_deterministic_replication = { path = "./lightyear_deterministic_replication", version = "0.24.0", default-features = false }
+lightyear_frame_interpolation = { path = "./lightyear_frame_interpolation", version = "0.24.0", default-features = false }
+lightyear_inputs = { path = "./lightyear_inputs", version = "0.24.0", default-features = false }
+lightyear_inputs_bei = { path = "./lightyear_inputs_bei", version = "0.24.0", default-features = false }
+lightyear_inputs_leafwing = { path = "./lightyear_inputs_leafwing", version = "0.24.0", default-features = false }
+lightyear_inputs_native = { path = "./lightyear_inputs_native", version = "0.24.0", default-features = false }
+lightyear_interpolation = { path = "./lightyear_interpolation", version = "0.24.0", default-features = false }
+lightyear_messages = { path = "./lightyear_messages", version = "0.24.0", default-features = false }
+lightyear = { path = "lightyear", version = "0.24.0", default-features = false }
+lightyear_transport = { path = "lightyear_transport", version = "0.24.0", default-features = false }
+lightyear_prediction = { path = "./lightyear_prediction", version = "0.24.0", default-features = false }
+lightyear_link = { path = "./lightyear_link", version = "0.24.0", default-features = false }
+lightyear_replication = { path = "./lightyear_replication", version = "0.24.0", default-features = false }
+lightyear_serde = { path = "./lightyear_serde", version = "0.24.0", default-features = false }
+lightyear_steam = { path = "./lightyear_steam", version = "0.24.0", default-features = false }
+lightyear_sync = { path = "./lightyear_sync", version = "0.24.0", default-features = false }
+lightyear_udp = { path = "./lightyear_udp", version = "0.24.0", default-features = false }
+lightyear_utils = { path = "./lightyear_utils", version = "0.24.0", default-features = false }
+lightyear_tests = { path = "./lightyear_tests", version = "0.24.0", default-features = false }
+lightyear_webtransport = { path = "./lightyear_webtransport", version = "0.24.0", default-features = false }
+lightyear_websocket = { path = "./lightyear_websocket", version = "0.24.0", default-features = false }
 
 # examples
-lightyear_examples_common = { path = "./examples/common", version = "0.23.0", default-features = false }
+lightyear_examples_common = { path = "./examples/common", version = "0.24.0", default-features = false }
 
 # utils
 anyhow = { version = "1.0.75", features = [] }
@@ -207,7 +207,7 @@ bevy_utils = { version = "0.16", default-features = false }
 tracy-client = { version = "=0.18.0" }
 
 # input
-bevy_enhanced_input = { git = "https://github.com/simgine/bevy_enhanced_input.git", branch = "master" }
+bevy_enhanced_input = { version = "0.18" }
 leafwing-input-manager = { version = "0.17.1", default-features = false, features = [
   "keyboard",
 ] }
