--- a/lightyear_replication/Cargo.toml
+++ b/lightyear_replication/Cargo.toml
@@ -17,7 +17,7 @@ prediction = ["lightyear_core/prediction"]
 interpolation = ["lightyear_core/interpolation"]
 deterministic = ["dep:seahash"]
 trace = []
-metrics = ["dep:metrics", "std"]
+metrics = ["dep:metrics", "std", "lightyear_utils/metrics"]
 test_utils = []
 avian2d = ["dep:avian2d"]
 avian3d = ["dep:avian3d"]
